# page-replacement-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  test.cpp
example/: CMakeLists.txt  demo.cpp  different_frames.cpp  different_modify_percent.cpp  different_pages.cpp  different_periods.cpp  hot_page_diff_block.cpp  hot_page_diff_interval.cpp  hot_page_diff_page.cpp  main.cpp  sequence_access.cpp  small_page_frequent_access.cpp  time_algorithms.cpp
include/paging/: Common.h  PageTable.h  PagingSimulator.h  PhysicalMemory.h  Strategy.h
include/paging/strategy/: Aging.h  AgingHeap.h  Clock.h  Fifo.h  IStrategy.h  Lru.h  Nru.h  WsClock.h
include/paging/util/: InputGenerator.h
input/: input_page_reference.txt  page_ref_10_block_10_page_20_itv_1024p_0m.txt  page_ref_1_block_10_page_20_itv_1024p_0m.txt  page_ref_1_block_1_page_20_itv_1024p_0m.txt  page_ref_1_block_20_page_10_itv_1024p_0m.txt  page_ref_1_block_20_page_20_itv_1024p_0m.txt  page_ref_1_block_20_page_30_itv_1024p_0m.txt  page_ref_1_block_20_page_40_itv_1024p_0m.txt  page_ref_1_block_20_page_50_itv_1024p_0m.txt  page_ref_1_block_40_page_20_itv_1024p_0m.txt  page_ref_1_block_5_page_20_itv_1024p_0m.txt  page_ref_20_block_10_page_20_itv_1024p_0m.txt  page_ref_3_block_10_page_50_itv_1024p_0m.txt  page_ref_3_block_10_page_50_itv_1024p_100m.txt  page_ref_3_block_10_page_50_itv_1024p_10m.txt  page_ref_3_block_10_page_50_itv_1024p_20m.txt  page_ref_3_block_10_page_50_itv_1024p_30m.txt  page_ref_3_block_10_page_50_itv_1024p_40m.txt  page_ref_3_block_10_page_50_itv_1024p_50m.txt  page_ref_3_block_10_page_50_itv_1024p_60m.txt  page_ref_3_block_10_page_50_itv_1024p_70m.txt  page_ref_3_block_10_page_50_itv_1024p_80m.txt  page_ref_3_block_10_page_50_itv_1024p_90m.txt  page_ref_3_block_10_page_50_itv_128p_0m.txt  page_ref_3_block_10_page_50_itv_2048p_0m.txt  page_ref_3_block_10_page_50_itv_256p_0m.txt  page_ref_3_block_10_page_50_itv_512p_0m.txt  page_ref_50_block_10_page_20_itv_1024p_0m.txt  page_ref_5_block_10_page_20_itv_1024p_0m.txt  page_reference_1024p_0m.txt  page_reference_1024p_100m.txt  page_reference_1024p_10m.txt  page_reference_1024p_20m.txt  page_reference_1024p_30m.txt  page_reference_1024p_40m.txt  page_reference_1024p_50m.txt  page_reference_1024p_60m.txt  page_reference_1024p_70m.txt  page_reference_1024p_80m.txt  page_reference_1024p_90m.txt  (+22 more)
output/: demo.txt  different_frames.txt  different_modify_percent.txt  different_pages.txt  different_periods.txt  hot_page_diff_block.txt  hot_page_diff_interval.txt  hot_page_diff_page.txt  sequence_access.txt  small_page_frequent_access.txt  time_algorithms.txt
src/: CMakeLists.txt
src/paging/: PageTable.cpp  PagingSimulator.cpp  PhysicalMemory.cpp
src/paging/strategy/: Aging.cpp  AgingHeap.cpp  Clock.cpp  Fifo.cpp  IStrategy.cpp  Lru.cpp  Nru.cpp  WsClock.cpp
src/paging/util/: InputGenerator.cpp
tests/: CMakeLists.txt  Config.h  test_aging.cpp  test_clock.cpp  test_fifo.cpp  test_lru.cpp  test_nru.cpp
